[tool.poetry]
name = "deck-view"
version = "0.1.0"
description = ""
authors = ["h4x4d <cleanyboom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vkbottle = "^4.3.12"
numpy = "^2.0.0"
pillow = "^10.3.0"
requests = "^2.32.3"
grequests = "^0.7.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
